video layout bug fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -578,7 +578,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
 
 /* Medium Layout: 1200px. */
 @media only screen and (min-width: 992px) and (max-width: 1200px) { 
-  #vanner-video { 
+  #banner-video { 
     position: absolute;
     top: 50%;
     left: 50%;
